--- a/app/src/view/formulario/dadosPretendente.html
+++ b/app/src/view/formulario/dadosPretendente.html
@@ -1,7 +1,7 @@
  <div layout="column" layout-gt-sm="row" layout-padding>
    <div class="md-block" flex-gt-sm="50">
       <label for="nome">Nome</label>
-      <input type="text" id="nome" upper name="nome" focus
+      <input type="text" id="nome" upper name="nome" focus requerido 
       class="form-control" ng-model="cadastro.pretendente.nome" ng-tabindex="1">
     </div>
   
