--- a/app/src/view/formulario/dadosImovel.html
+++ b/app/src/view/formulario/dadosImovel.html
@@ -1,3 +1,4 @@
+<form name="formDadosImovel">
 <div layout="column" layout-padding layout-gt-sm="row">
   <div class="md-block" flex-gt-sm="50">
         <label for="finalidade">Finalidade Imóvel</label>
@@ -149,10 +150,7 @@
     </div>
     </div>
 
-  </div>
-
-<div layout="column" layout-padding layout-gt-sm="row">
-    <div class="md-block" flex-gt-sm="20">
+    <div class="md-block">
       <label for="total">Total</label>
       <div class="input-group">
       <span class="input-group-addon"
@@ -161,4 +159,6 @@
       class="form-control" ng-model="cadastro.imovel.total" ng-tabindex="2">
     </div>
     </div>
-</div>
+
+  </div>
+</form>
