--- a/app/src/view/formulario/dadosPretendente.html
+++ b/app/src/view/formulario/dadosPretendente.html
@@ -1,9 +1,10 @@
- <div layout="column" layout-gt-sm="row" layout-padding>
-   <div class="md-block" flex-gt-sm="50">
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" upper name="nome" focus requerido 
-      class="form-control" ng-model="cadastro.pretendente.nome" ng-tabindex="1">
-    </div>
+<form name="formDadosPretendente">
+   <div layout="column" layout-gt-sm="row" layout-padding>
+     <div class="md-block" flex-gt-sm="50">
+        <label for="nome">Nome</label>
+        <input type="text" id="nome" upper name="nome" focus requerido 
+        class="form-control" ng-model="cadastro.pretendente.nome" ng-tabindex="1">
+      </div>
   
 
     <div class="md-block" flex-gt-sm="25">
@@ -173,3 +174,4 @@
       </select>
     </div>
   </div>
+</form>
