--- a/app/src/view/formulario/dadosProfissionais.html
+++ b/app/src/view/formulario/dadosProfissionais.html
@@ -1,3 +1,4 @@
+<form name="formDadosProfissionais">
 <div layout="column" layout-padding layout-gt-sm="row">
   <div class="md-block" flex-gt-sm="60">
         <label for="empresa">Empresa</label>
@@ -180,3 +181,4 @@
 
   </div>
 </div>
+</form>
