--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -59,6 +59,12 @@ input[type="text"] {
   border-radius: 12px;
   padding: 10px;
   margin-top: 5px;
+  background-color: #E2E2E2;
+}
+
+.fundo-formulario{
+   background-color: #E2E2E2;
+   color: #717079;
 }
 
 #borda-icones{
