--- a/app/src/view/formulario/dadosImovel.html
+++ b/app/src/view/formulario/dadosImovel.html
@@ -1,4 +1,4 @@
-<form name="formDadosImovel">
+<form name="formDadosImovel" class="fundo-formulario">
 <div layout="column" layout-padding layout-gt-sm="row">
   <div class="md-block" flex-gt-sm="50">
         <label for="finalidade">Finalidade Imóvel</label>
