--- a/app/src/view/formulario/dadosResidenciais.html
+++ b/app/src/view/formulario/dadosResidenciais.html
@@ -1,4 +1,4 @@
-<form name="formDadosResidenciais">
+<form name="formDadosResidenciais" class="fundo-formulario">
 <div layout="column" layout-padding layout-gt-sm="row">
   <div class="md-block" flex-gt-sm="25">
         <label for="tempoResidencia">Tempo de Residencia</label>
@@ -96,7 +96,7 @@
 
 
 
-<div class="alert alert-info" role="alert" flex-gt-sm="40">Endereço residencial anterior(se menor de 1 ano)</div>
+<div flex-gt-sm="40"><label> <h4> Endereço residencial anterior(se menor de 1 ano)</h4></label></div>
 
 <div layout="column" layout-padding layout-gt-sm="row">
   <div class="md-block" flex-gt-sm="15">
