--- a/app/src/view/formulario/dadosPretendente.html
+++ b/app/src/view/formulario/dadosPretendente.html
@@ -24,7 +24,7 @@
 
 <div layout="column" layout-gt-sm="row" layout-padding>
     <div class="md-block" flex-gt-sm="40">
-      <label for="numDoc">Numero do Documento</label>
+      <label for="numDoc">Numero do Documento (RG/RNE/Ordem/Conselho)</label>
       <input type="number" id="numDoc" name="numDoc" class="form-control" ng-model="cadastro.pretendente.numDoc" 
       ng-tabindex="4">
     </div>
@@ -63,7 +63,6 @@
     <div class="md-block" flex-gt-sm="25">
       <label>Estado Civil</label>
       <select class="form-control" ng-model="cadastro.pretendente.estadoCivil" ng-tabindex="9">
-        <option value="">(Nenhum)</option>
         <option value="solteiro">Solteiro(a)</option>
         <option value="casado">Casado(a)</option>
         <option value="separado">Separado(a)</option>
@@ -103,6 +102,56 @@
 </div>
    
   <div layout="column" layout-gt-sm="row" layout-padding> 
+    <div class="md-block" flex-gt-sm="55">
+      <label for="nacionalidade">Nacionalidade</label>
+      <input type="text" id="nacionalidade" name="nacionalidade" 
+      class="form-control" ng-model="cadastro.pretendente.nacionalidade" ng-tabindex="17">
+    </div>
+
+    <div class="md-block" flex-gt-sm="20">
+      <label for="paisOrigem">País de Origem</label>
+      <input type="text" id="paisOrigem" name="paisOrigem" 
+      class="form-control" ng-model="cadastro.pretendente.paisOrigem" ng-tabindex="18">
+    </div>
+
+     <div class="md-block" flex-gt-sm="25">
+      <label for="tempoPais">Tempo no País</label>
+      <input type="text" id="tempoPais" name="tempoPais" 
+      class="form-control" ng-model="cadastro.pretendente.tempoPais" ng-tabindex="19">
+    </div>
+
+  </div>
+
+   
+ <div layout="column" layout-gt-sm="row" layout-padding> 
+
+    <div class="md-block" flex-gt-sm="50">
+      <label for="email">Responsavel pela locação</label>
+      <input type="email" id="email" name="email" 
+      class="form-control" ng-model="cadastro.pretendente.email" ng-tabindex="21">
+    </div>
+
+    <div class="md-block" flex-gt-sm="25">
+      <label>Pretendente irá residir no imóvel</label>
+      <select class="form-control" flex-gt-sm="40"
+      ng-model="cadastro.pretendente.iraResidirImovel" ng-tabindex="22">
+        <option value="sim">SIM</option>
+        <option value="nao">NÃO</option>
+      </select>
+    </div>
+
+    <div class="md-block" flex-gt-sm="30">
+      <label>Possui renda para arcar com a locação</label>
+      <select class="form-control" flex-gt-sm="35"
+      ng-model="cadastro.pretendente.possuiRendaArcarLocacao" ng-tabindex="23">
+        <option value="sim">SIM</option>
+        <option value="nao">NÃO</option>
+      </select>
+    </div>
+
+  </div>
+
+  <div layout="column" layout-gt-sm="row" layout-padding> 
     <div class="md-block" flex-gt-sm="15">
       <label for="telefone">Telefone</label>
       <input mobile="tel" mascara="(99) 9999-9999?9" id="telefone" name="telefone" 
@@ -121,59 +170,10 @@
       class="form-control" ng-model="cadastro.pretendente.telefoneComercial" ng-tabindex="16">
     </div>
 
-     <div class="md-block" flex-gt-sm="35">
-      <label for="nacionalidade">Nacionalidade</label>
-      <input type="text" id="nacionalidade" name="nacionalidade" 
-      class="form-control" ng-model="cadastro.pretendente.nacionalidade" ng-tabindex="17">
-    </div>
-
-    <div class="md-block" flex-gt-sm="20">
-      <label for="paisOrigem">País de Origem</label>
-      <input type="text" id="paisOrigem" name="paisOrigem" 
-      class="form-control" ng-model="cadastro.pretendente.paisOrigem" ng-tabindex="18">
-    </div>
-
-  </div>
-
-   
- <div layout="column" layout-gt-sm="row" layout-padding> 
-    <div class="md-block" flex-gt-sm="25">
-      <label for="tempoPais">Tempo no País</label>
-      <input type="text" id="tempoPais" name="tempoPais" 
-      class="form-control" ng-model="cadastro.pretendente.tempoPais" ng-tabindex="19">
-    </div>
-
-    <div class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="55">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" 
       class="form-control" ng-model="cadastro.pretendente.email" ng-tabindex="20">
-    </div>
-
-    <div class="md-block" flex-gt-sm="50">
-      <label for="email">Responsavel pela locação</label>
-      <input type="email" id="email" name="email" 
-      class="form-control" ng-model="cadastro.pretendente.email" ng-tabindex="21">
-    </div>
-
-  </div>
-
-<div layout="column" layout-gt-sm="row" layout-padding> 
-    <div class="md-block" flex-gt-sm="25">
-      <label>Pretendente irá residir no imóvel</label>
-      <select class="form-control" flex-gt-sm="40"
-      ng-model="cadastro.pretendente.iraResidirImovel" ng-tabindex="22">
-        <option value="sim">SIM</option>
-        <option value="nao">NÃO</option>
-      </select>
-    </div>
-
-    <div class="md-block" flex-gt-sm="30">
-      <label>Possui renda para arcar com a locação</label>
-      <select class="form-control" flex-gt-sm="35"
-      ng-model="cadastro.pretendente.possuiRendaArcarLocacao" ng-tabindex="23">
-        <option value="sim">SIM</option>
-        <option value="nao">NÃO</option>
-      </select>
     </div>
   </div>
 </form>
