--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -34,7 +34,7 @@ h1 strong{
 }
 
 /*textos maiusculos nos inputs text*/
-input[type="text"] {
+input[type="text"][upper] {
     text-transform: uppercase;
 }
 
@@ -71,7 +71,7 @@ input[type="text"] {
 .disabled-value{
   background-color: #9c9999 !important;
   color: white !important;
-  font-size: large !important;
+  font-size: initial !important;
   font-weight: bold !important;
 }
 
@@ -238,6 +238,22 @@ input[type="text"] {
   padding: 1px 5px;
 }
   
+}
+
+/*Legenda fieldset*/
+fieldset.scheduler-border {
+    border: 1px solid #ccc !important;
+    border-radius: 7px;
+    padding: 0 1.4em 1.4em 1.4em !important;
+    margin: 0 0 1.5em 0 !important;
+    -webkit-box-shadow:  0px 0px 0px 0px #000;
+            box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.scheduler-border {
+    width: auto !important;
+    border: none;
+    font-size: 13px;
 }
 
 /*----------Back to Top Button -----------*/
